tests/overlays/development/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nginx-test.sugardon.com
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-test
              servicePort: 80
